// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TileBlock /> sets image url 1`] = `
<TileBlock
  imageUrl="http://via.placeholder.com/300"
  title=""
>
  <div>
    <h1 />
    <img
      alt="Tile Image"
      src="http://via.placeholder.com/300"
    />
  </div>
</TileBlock>
`;

exports[`<TileBlock /> sets title 1`] = `
<TileBlock
  imageUrl=""
  title="TestBlock"
>
  <div>
    <h1>
      TestBlock
    </h1>
    <img
      alt="Tile Image"
      src=""
    />
  </div>
</TileBlock>
`;
